...
        '홈',
      ),
      _buildNavItem(
        MainTabs.chat,
        Icons.chat_rounded,
        Icons.chat_bubble_outline_rounded,
        '채팅',
        badgeCount: chatBadge,
      ),
      _buildNavItem(
        MainTabs.calendar,
        Icons.calendar_month_rounded,
        Icons.calendar_month_outlined,
        '일정',
      ),
      _buildNavItem(
        MainTabs.approval,
        Icons.fact_check_rounded,
        Icons.fact_check_outlined,
        '전자결재',
        badgeCount: approvalBadge,
      ),
      _buildNavItem(
        MainTabs.menu,
        Icons.menu_rounded,
        Icons.menu_rounded,
...
